Provide a better fall-back font for Linux systems without Georgia (fixes Bug 626730 - At mozilla.com, text and download-arrow overlap in big green button)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk@81681 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/covehead/content.css
+++ b/style/covehead/content.css
@@ -263,7 +263,7 @@ a.download-link span.download-content {
 	display: block;
 	background: url(/img/home/download-logo.png) 0 0 no-repeat;
 	height: 95px;
-	font-family: georgia, serif;
+	font-family: georgia, "Bitstream Charter", serif;
 	font-style: italic;
 	font-weight: normal;
 	font-size: 18px;
@@ -292,7 +292,6 @@ ul.home-download li a.download-link span.download-info {
 	display: block;
 	margin-top: 3px;
 	color: #346012;
-	font-family: georgia, serif;
 	font-size: 12px;
 	font-style: normal;
 	line-height: 12px;
